--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -1,35 +1,18 @@
 <div class="entity-index">
   <blue-header [items]="crumbItems" [titleValue]="'CUSTOMER_INDEX_TITLE'"></blue-header>
 
-  <button mat-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><mat-icon>add</mat-icon></button>
-
-  <entities-table-wrapper
-    [data]="entities"
-    [loaded]="initialLoaded"
-    [columnParams]="columnParams"
-    [filterString]="filterValue"
-    [serverError]="serverError"
-    (selected)="viewEntity($event.id)"
-
-    [service]="service"
-    (viewClicked)="viewEntity($event.id)"
-    (copyClicked)="copyEntity($event.id)"
-    (exportClicked)="exportEntity($event.id)"
-    (editClicked)="editEntity($event.id)"
-    (deleteClicked)="deleteEntity($event.id)"
-    (deleteManyClicked)="deleteMany($event)"
-    (refreshData)="refreshData()"
-
-    [limit]="limit"
-    [paginationValues]="paginationValues"
-    [previousDisabled]="page <= 0"
-    [nextDisabled]="!hasMorePages()"
-    (previous)="previous()"
-    (next)="next()"
-    (updateLimit)="updateLimit($event)"
-    (filterChanged)="filterValue = $event"
-    (searchChanged)="setSearchString($event)">
-  </entities-table-wrapper>
+  <filter-table [date]="date"
+                [columnParams]="columnParams"
+                [items]="entitiesHolder"
+                [tabs]="tabs"
+                [loading]="loadingData"
+                [singleOptions]="options"
+                [dateFilterEnabled]="false"
+                (tabSelected)="selectTab($event)"
+                (dateChanged)="changeDate($event)"
+                (singleOptionSelected)="optionSelected($event)"
+                (loadMore)="loadMore()">
+  </filter-table>
 </div>
 
 <div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
