--- a/src/app/shared/components/filter-table/filter-table.component.html
+++ b/src/app/shared/components/filter-table/filter-table.component.html
@@ -1,52 +1,101 @@
 <div class="container">
 
-  <div class="header">
-    <div class="date"></div>
+  <div class="toolbar">
+    <div *ngIf="dateFilterEnabled" class="date">
+      <div class="datepicker--custom datepicker--custom--filters">
+        <div daterangepicker (selected)="dateSelected($event)">
+          <div class="datepicker__label">
+            <mat-icon>date_range</mat-icon>{{_date.start | formatDateTime: 'MMMM D, YYYY'}} to {{_date.end | formatDateTime: 'MMMM D, YYYY'}}
+          </div>
+        </div>
+      </div>
 
-    <div class="filters"></div>
+    </div>
+
+    <div class="tabs" [class.tabs--no-date]="!dateFilterEnabled">
+      <ng-container *ngFor="let tab of tabs">
+        <div *ngIf="tab.visible" class="tabs__item" [class.tabs__item--selected]="tab.selected" (click)="tabSelected.emit(tab)">
+          {{tab.label}}
+        </div>
+      </ng-container>
+    </div>
 
     <div class="options">
-      <div>Filters</div>
-      <div>Columns</div>
-      <div>Settings</div>
+      <div><mat-icon>filter_list</mat-icon>Filters</div>
+      <div (click)="openColumnPreferencesDialog()"><mat-icon>view_column</mat-icon>Columns</div>
+      <div (click)="openTabPreferencesDialog()"><mat-icon>settings</mat-icon>Settings</div>
     </div>
-
   </div>
 
-  <div>
+  <div class="data">
 
-    <div [style.width]="getHeaderWidthByElement(head)">
-      <div>
-        <div [style.width]="getHeaderWidthByElement(bulkheader)" class="bulk-header"></div>
-        <ng-container *ngFor="let params of columnParams;">
-          <div [style.width]="getHeaderWidth(params)">
-            {{params.label | translate}}
-          </div>
-        </ng-container>
-        <th [style.width]="getHeaderWidthByElement(actionsheader)"></th>
+    <div [style.width]="getHeaderWidthByElement(head)" class="floating-header">
+      <div class="head" [style.width]="getHeaderWidthByElement(bulkheader)">
+        <mat-checkbox (change)="toggleBulkSelection($event)"></mat-checkbox>
       </div>
+      <ng-container *ngFor="let params of columnParams;">
+        <div class="head" *ngIf="params.selected" [style.width]="getHeaderWidth(params)">
+          {{params.label | translate}}
+        </div>
+      </ng-container>
+      <div class="head" [style.width]="getHeaderWidthByElement(actionsheader)"></div>
     </div>
 
+    <div class="table-wrapper"
+         infiniteScroll
+         [infiniteScrollDistance]="2"
+         [infiniteScrollThrottle]="300"
+         [scrollWindow]="false"
+         (scrolled)="loadMore.emit(true)">
 
-    <table>
-      <thead>
-        <th #bulkheader></th>
-        <th #originalheader *ngFor="let param of columnParams">
-          {{param.label | translate}}
+      <table>
+        <thead #head>
+        <th #bulkheader>
+          <mat-checkbox></mat-checkbox>
         </th>
+        <ng-container *ngFor="let param of columnParams">
+          <th #originalheader *ngIf="param.selected">
+            {{param.label | translate}}
+          </th>
+        </ng-container>
         <th #actionsheader></th>
-      </thead>
+        </thead>
 
-      <tbody>
+        <tbody>
         <tr *ngFor="let item of items">
-          <td></td>
-          <td *ngFor="let param of columnParams">
-            {{param.mappingFunction(item)}}
+          <td><mat-checkbox (change)="toggleSelection($event)" [(ngModel)]="item.bulkSelected"></mat-checkbox></td>
+          <ng-container *ngFor="let param of columnParams">
+            <td *ngIf="param.selected">
+              {{param.mappingFunction(item)}}
+            </td>
+          </ng-container>
+          <td>
+            <mat-icon [matMenuTriggerFor]="singleOptionMenu">more_vert</mat-icon>
+            <mat-menu #singleOptionMenu="matMenu" x-position="before">
+              <button *ngFor="let option of singleOptions" mat-menu-item (click)="singleOptionSelected.emit({item: item, option: option})">{{option}}</button>
+            </mat-menu>
           </td>
-          <td></td>
         </tr>
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+
+      <div class="loader" *ngIf="loading">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+      <div class="bulk-actions" *ngIf="numberOfSelected > 0">
+        <button mat-button>CANCEL</button>
+        <div class="number">{{numberOfSelected}} Selected</div>
+
+        <div class="options">
+          <div class="options__selected">- <mat-icon>keyboard_arrow_down</mat-icon></div>
+        </div>
+
+        <button mat-button>APPLY</button>
+      </div>
+    </div>
 
   </div>
 
