--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -1,6 +1,6 @@
 <div class="entity-index">
 
-  <blue-header [items]="crumbItems" [titleValue]="'REBILL_INDEX_TITLE'"></blue-header>
+  <blue-header [items]="crumbItems" [titleValue]="title"></blue-header>
 
   <filter-table [date]="date"
                 [columnParams]="columnParams"
