Work on order table filters

--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -8,6 +8,7 @@
                 [loading]="loadingData"
                 [singleOptions]="options"
                 [dateFilterEnabled]="false"
+                (filtersSelected)="openFiltersDialog()"
                 (tabSelected)="selectTab($event)"
                 (dateChanged)="changeDate($event)"
                 (singleOptionSelected)="optionSelected($event)"
