--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -8,6 +8,7 @@
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
+                (filtersSelected)="openFiltersDialog()"
                 (tabSelected)="selectTab($event)"
                 (dateChanged)="changeDate($event)"
                 (singleOptionSelected)="optionSelected($event)"
