--- a/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
@@ -8,6 +8,7 @@
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
+                (filtersSelected)="openFiltersDialog()"
                 (tabSelected)="selectTab($event)"
                 (dateChanged)="changeDate($event)"
                 (singleOptionSelected)="optionSelected($event)"
