--- a/src/app/dialog-modals/tab-preferences-dialog/tab-preferences-dialog.component.scss
+++ b/src/app/dialog-modals/tab-preferences-dialog/tab-preferences-dialog.component.scss
@@ -26,10 +26,23 @@
       align-items: center;
       font-size: 15px;
       line-height: 24px;
-      margin-bottom: 10px;
+      margin-bottom: 12px;
 
       mat-checkbox {
         margin-right: 15px;
+      }
+
+      .label {
+        margin-right: 35px;
+      }
+
+      mat-icon {
+        margin-left: auto;
+        font-size: 20px;
+        height: 20px;
+        width: 20px;
+        cursor: pointer;
+        color: #5F6368;
       }
     }
   }
