--- a/src/app/dialog-modals/transaction-filters-dialog/transaction-filters-dialog.component.html
+++ b/src/app/dialog-modals/transaction-filters-dialog/transaction-filters-dialog.component.html
@@ -5,82 +5,90 @@
     <mat-icon (click)="close()">close</mat-icon>
   </div>
 
-  <div class="content">
+  <div [class.content--invisible]="saveAsMode">
 
-    <div class="mrw-bi-input search-input-container">
-      <mat-form-field [floatLabel]="'never'">
-        <input type="text" matInput placeholder="Search">
-      </mat-form-field>
-      <mat-icon class="topnav__search__icon">search</mat-icon>
-    </div>
+    <div class="content">
 
-    <div class="date">
+      <div class="mrw-bi-input search-input-container">
+        <mat-form-field [floatLabel]="'never'">
+          <input type="text" matInput placeholder="Search">
+        </mat-form-field>
+        <mat-icon class="topnav__search__icon">search</mat-icon>
+      </div>
 
-      <div class="date__title">Date Range</div>
-      <filter-daterange-picker [date]="date" (dateChanged)="dateSelected($event)"></filter-daterange-picker>
+      <div class="date">
 
-    </div>
+        <div class="date__title">Date Range</div>
+        <filter-daterange-picker [date]="date" (dateChanged)="dateSelected($event)"></filter-daterange-picker>
 
-    <div class="box-container">
-      <div class="box-row">
-        <div class="box">
-          <div class="label">Status</div>
-          <mat-checkbox [checked]="true">All</mat-checkbox>
-          <mat-checkbox>Chargeback</mat-checkbox>
-          <mat-checkbox>Decline</mat-checkbox>
-          <mat-checkbox>Refund</mat-checkbox>
-          <mat-checkbox>Success</mat-checkbox>
-          <mat-checkbox>Success</mat-checkbox>
+      </div>
+
+      <div class="box-container">
+        <div class="box-row">
+          <div class="box">
+            <div class="label">Status</div>
+            <mat-checkbox [checked]="true">All</mat-checkbox>
+            <mat-checkbox>Chargeback</mat-checkbox>
+            <mat-checkbox>Decline</mat-checkbox>
+            <mat-checkbox>Refund</mat-checkbox>
+            <mat-checkbox>Success</mat-checkbox>
+            <mat-checkbox>Success</mat-checkbox>
+          </div>
+
+          <div class="box">
+            <div class="label">Card Type</div>
+            <mat-checkbox [checked]="true">All</mat-checkbox>
+            <mat-checkbox>American Express</mat-checkbox>
+            <mat-checkbox>Mastercard</mat-checkbox>
+            <mat-checkbox>Visa</mat-checkbox>
+          </div>
         </div>
 
-        <div class="box">
-          <div class="label">Card Type</div>
-          <mat-checkbox [checked]="true">All</mat-checkbox>
-          <mat-checkbox>American Express</mat-checkbox>
-          <mat-checkbox>Mastercard</mat-checkbox>
-          <mat-checkbox>Visa</mat-checkbox>
+        <div class="box-row">
+          <div class="box">
+            <div class="label">MID Responses</div>
+            <mat-checkbox [checked]="true">All</mat-checkbox>
+            <mat-checkbox>Decline</mat-checkbox>
+            <mat-checkbox>Error</mat-checkbox>
+            <mat-checkbox>Success</mat-checkbox>
+          </div>
+
+          <div class="box">
+            <div class="label">MIDs</div>
+            <mat-checkbox [checked]="true">All</mat-checkbox>
+            <mat-checkbox>Mid 1</mat-checkbox>
+            <mat-checkbox>Mid 2</mat-checkbox>
+            <mat-checkbox>Mid 3</mat-checkbox>
+          </div>
         </div>
       </div>
 
-      <div class="box-row">
-        <div class="box">
-          <div class="label">MID Responses</div>
-          <mat-checkbox [checked]="true">All</mat-checkbox>
-          <mat-checkbox>Decline</mat-checkbox>
-          <mat-checkbox>Error</mat-checkbox>
-          <mat-checkbox>Success</mat-checkbox>
-        </div>
+      <div class="filter">
+        <div class="filter__title">Locations</div>
 
-        <div class="box">
-          <div class="label">MIDs</div>
-          <mat-checkbox [checked]="true">All</mat-checkbox>
-          <mat-checkbox>Mid 1</mat-checkbox>
-          <mat-checkbox>Mid 2</mat-checkbox>
-          <mat-checkbox>Mid 3</mat-checkbox>
-        </div>
+        <location-filter [locations]="locations" (locationAdded)="addLocation()" (locationRemovedAtIndex)="removeLocationAtIndex($event)"></location-filter>
       </div>
+
+      <div class="filter">
+        <div class="filter__title">Values</div>
+
+        <value-filter [columns]="filterColumns" [filters]="filters" (filterAdded)="addFilter()" (filterRemovedAtIndex)="removeFilterAtIndex($event)"></value-filter>
+      </div>
+
     </div>
 
-    <div class="filter">
-      <div class="filter__title">Locations</div>
+    <div class="buttons-container">
 
-      <location-filter [locations]="locations" (locationAdded)="addLocation()" (locationRemovedAtIndex)="removeLocationAtIndex($event)"></location-filter>
-    </div>
+      <button mat-button class="save" (click)="setSaveAs(true)">Save As...</button>
+      <button mat-button class="cancel" (click)="close()">Cancel</button>
+      <button mat-button class="filter" (click)="filter()">Filter</button>
 
-    <div class="filter">
-      <div class="filter__title">Values</div>
-
-      <value-filter [columns]="filterColumns" [filters]="filters" (filterAdded)="addFilter()" (filterRemovedAtIndex)="removeFilterAtIndex($event)"></value-filter>
     </div>
 
   </div>
 
-  <div class="buttons-container">
-
-    <button mat-button class="save" (click)="save()">Save As...</button>
-    <button mat-button class="cancel" (click)="close()">Cancel</button>
-    <button mat-button class="filter" (click)="filter()">Filter</button>
-
+  <div [class.content--invisible]="!saveAsMode">
+    <filter-save-as (back)="setSaveAs(false)" (saveAs)="save($event)"></filter-save-as>
   </div>
 
 </div>
