--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="topnav">
   <button mat-icon-button (click)="toggleNavMenu()" id="menu-toggler">
-    <mat-icon>menu</mat-icon>
+    <mat-icon id="menu-toggler-icon">menu</mat-icon>
   </button>
 
   <img class="topnav__logo" src="{{'/assets/images/' + logo}}" alt="">
