--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -7,13 +7,20 @@
   font-family: Roboto, sans-serif;
 }
 
-navigation-menu {
+.navigation-menu--overlay {
   position: absolute;
-  display: block;
-  background: white;
   z-index: 2;
   width: 100%;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
+  height: 100%;
+  background: rgba(0,0,0,0);
+
+  navigation-menu {
+    display: block;
+    background: white;
+    width: 100%;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
+  }
+
 }
 
 .container--hover {
