--- a/src/app/pages/customer-advanced-page/customer-advanced.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.html
@@ -1,52 +1,82 @@
-<blue-header [items]="breadcrumbs" [titleValue]="entity ? entity.firstName + ' ' + entity.lastName : null"></blue-header>
+<div class="wrapper">
+  <div class="container" [class.container--with-side]="detailsElement && selectedIndex === 5">
+    <blue-header [items]="breadcrumbs" [titleValue]="getTitle()">
+      <ng-container *ngIf="sessionId && session && sessionService.hasWritePermission()">
+        <button mat-button *ngIf="!session.cancelled.cancelled; else cancelmessage" (click)="openCancelSessionModal()" class="cancel">CANCEL SESSION</button>
+        <ng-template #cancelmessage>
+          <div class="cancelled-message">
+            <div>Session cancelled</div>
+            <div>by {{session.cancelled.cancelledBy.name}} at {{session.cancelled.cancelledAt.format('MM/DD/YY')}}</div>
+          </div>
+        </ng-template>
+      </ng-container>
+    </blue-header>
 
-<div class="body">
-  <div class="section" [class.section--full]="!infoVisible">
-    <tab-header [elements]="tabHeaders"
-                [selectedIndex]="selectedIndex"
-                (select)="setIndex($event)">
-      <mat-icon class="info-icon" [class.info-icon--active]="infoVisible" (click)="infoVisible = !infoVisible">info</mat-icon>
-    </tab-header>
+    <div class="body">
+      <div class="section" [class.section--full]="!infoVisible || selectedIndex === 5">
+        <tab-header [elements]="tabHeaders"
+                    [selectedIndex]="selectedIndex"
+                    (select)="setIndex($event)">
+          <mat-icon *ngIf="selectedIndex !== 5" class="info-icon" [class.info-icon--active]="infoVisible" (click)="infoVisible = !infoVisible">info</mat-icon>
+        </tab-header>
 
-    <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedIndex">
+        <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedIndex">
 
-      <mat-tab>
-        <customer-advanced-subscriptions [customer]="entity"></customer-advanced-subscriptions>
-      </mat-tab>
-      <mat-tab>
-        <customer-advanced-orders [customer]="entity" (transactionRefunded)="refreshTransactions()"></customer-advanced-orders>
-      </mat-tab>
-      <mat-tab>
-        <customer-advanced-transactions [customer]="entity" (transactionRefunded)="refreshOrders()"></customer-advanced-transactions>
-      </mat-tab>
-      <mat-tab>
-        <customer-advanced-fulfillments [customer]="entity"></customer-advanced-fulfillments>
-      </mat-tab>
-      <mat-tab>
-        <customer-advanced-events [customer]="entity"></customer-advanced-events>
-      </mat-tab>
+          <mat-tab>
+            <customer-advanced-subscriptions [rebills]="rebills" [sessionMode]="sessionId"></customer-advanced-subscriptions>
+          </mat-tab>
+          <mat-tab>
+            <customer-advanced-orders [orders]="orders" [selectedOrder]="selectedOrder" (transactionRefunded)="refreshTransactions($event)" (orderSelected)="setSelectedOrder($event)"></customer-advanced-orders>
+          </mat-tab>
+          <mat-tab>
+            <customer-advanced-transactions [transactions]="transactions" (orderSelected)="navigateToOrder($event)" (transactionRefunded)="refreshTransactions($event)"></customer-advanced-transactions>
+          </mat-tab>
+          <mat-tab>
+            <customer-advanced-fulfillments [receipts]="shippingReceipts"></customer-advanced-fulfillments>
+          </mat-tab>
+          <mat-tab>
+            <customer-advanced-events [customerId]="customer ? customer.id : null"></customer-advanced-events>
+          </mat-tab>
+          <mat-tab *ngIf="sessionId && session">
+            <schedules-detailed
+                    [productSchedules]="session.watermark.extractedProductSchedules"
+                    [products]="session.watermark.extractedProducts"
+                    [startDate]="session.startedAt"
+                    [editable]="!session.cancelled.cancelled"
+                    [canceled]="session.cancelled.cancelled"
+                    (productSchedulesChanged)="updateItems($event)"
+                    [statusMessage]="productSchedulesWaitingForUpdate ? 'Saving...' : 'All changes saved'"
+                    (detailsComponent)="setDetails($event)">
+            </schedules-detailed>
+          </mat-tab>
 
-    </mat-tab-group>
+        </mat-tab-group>
+      </div>
+
+      <div class="section" [class.section--invisible]="!infoVisible || selectedIndex === 5">
+        <tab-header [elements]="secondaryTabHeaders"
+                    [selectedIndex]="selectedSecondaryIndex"
+                    [ignoreUrl]="true"
+                    (select)="setSecondaryIndex($event)">
+          <mat-icon class="info-icon" (click)="infoVisible = false">close</mat-icon>
+        </tab-header>
+
+        <mat-tab-group class="tab--no-header tab--full-height" [(selectedIndex)]="selectedSecondaryIndex">
+
+          <mat-tab>
+            <customer-info [customer]="customer"></customer-info>
+          </mat-tab>
+
+          <mat-tab>
+            <customer-info-notes #customernotes [customer]="customer"></customer-info-notes>
+          </mat-tab>
+
+        </mat-tab-group>
+      </div>
+    </div>
   </div>
 
-  <div class="section" [class.section--invisible]="!infoVisible">
-    <tab-header [elements]="secondaryTabHeaders"
-                [selectedIndex]="selectedSecondaryIndex"
-                [ignoreUrl]="true"
-                (select)="setSecondaryIndex($event)">
-      <mat-icon class="info-icon" (click)="infoVisible = false">close</mat-icon>
-    </tab-header>
-
-    <mat-tab-group class="tab--no-header tab--full-height" [(selectedIndex)]="selectedSecondaryIndex">
-
-      <mat-tab>
-        <customer-info [customer]="entity"></customer-info>
-      </mat-tab>
-
-      <mat-tab>
-        <customer-info-notes #customernotes [customer]="entity"></customer-info-notes>
-      </mat-tab>
-
-    </mat-tab-group>
+  <div class="details-container" [class.details-container--hidden]="selectedIndex !== 5">
+    <ng-container *ngTemplateOutlet="detailsElement"></ng-container>
   </div>
 </div>
