--- a/src/app/pages/customer-advanced-page/customer-advanced.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.scss
@@ -1,6 +1,51 @@
 $content-height: calc(100vh - 225px);
 $info-width: 290px;
 
+.wrapper {
+  display: flex;
+
+  .container {
+    width: 100vw;
+  }
+
+  .details-container {
+
+    &--hidden {
+      width: 0;
+    }
+
+  }
+}
+
+.cancel {
+  font-size: 12px;
+  line-height: 12px;
+  color: white;
+  background: #EF4339;
+  font-weight: 500;
+  padding: 6px 16px;
+  cursor: pointer;
+}
+
+.cancelled-message {
+  margin-left: 25px;
+
+  div {
+    color: #ffffff;
+
+    &:first-of-type {
+      margin-bottom: 3px;
+      font-size: 12px;
+      font-weight: 500;
+      text-transform: uppercase;
+    }
+
+    &:last-of-type {
+      font-size: 12px;
+    }
+  }
+}
+
 .body {
   display: flex;
 
