--- a/src/app/pages/customer-advanced-page/customer-advanced.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced.component.html
@@ -26,10 +26,10 @@
             <customer-advanced-subscriptions [rebills]="rebills" [sessionMode]="sessionId"></customer-advanced-subscriptions>
           </mat-tab>
           <mat-tab>
-            <customer-advanced-orders [orders]="orders" [selectedOrder]="selectedOrder" (transactionRefunded)="refreshTransactions($event)" (orderSelected)="setSelectedOrder($event)"></customer-advanced-orders>
+            <customer-advanced-orders [orders]="orders" [selectedOrder]="selectedOrder" (transactionRefunded)="refreshTransactions()" (orderSelected)="setSelectedOrder($event)"></customer-advanced-orders>
           </mat-tab>
           <mat-tab>
-            <customer-advanced-transactions [transactions]="transactions" (orderSelected)="navigateToOrder($event)" (transactionRefunded)="refreshTransactions($event)"></customer-advanced-transactions>
+            <customer-advanced-transactions [transactions]="transactions" (orderSelected)="navigateToOrder($event)" (transactionRefunded)="refreshTransactions()"></customer-advanced-transactions>
           </mat-tab>
           <mat-tab>
             <customer-advanced-fulfillments [receipts]="shippingReceipts"></customer-advanced-fulfillments>
