Add transaction details analytics query

--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -3,7 +3,7 @@
 
   <filter-table [date]="date"
                 [columnParams]="columnParams"
-                [items]="entitiesHolder"
+                [items]="customers"
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
