--- a/src/app/pages/transactions-page/transactions-index/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions-index/transactions.component.html
@@ -4,7 +4,7 @@
 
   <filter-table [date]="date"
                 [columnParams]="columnParams"
-                [items]="entitiesHolder"
+                [items]="transactions"
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
