--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,22 +1,7 @@
 <div class="entity-view">
-  <div class="entity-view__title">{{'PROFILE_TITLE' | translate}}</div>
-
-  <div (click)="navigation.back()" class="entity-view__change-mode"><mat-icon>reply</mat-icon></div>
 
   <div *ngIf="user">
-    <div class="entity-view__info">
-      <div class="entity-view__info__image entity-view__info__image--profile">
-        <img src="{{ user.picture }}" alt="">
-      </div>
-      <div class="entity-view__info__data">
-        <div class="entity-view__info__data__date">{{'PROFILE_CREATED' | translate}}: {{user.createdAt | formatDateTime}}</div>
-        <div class="entity-view__info__data__name">{{user.name}}</div>
-        <div class="entity-view__info__data__other">
-          <span *ngIf="phone" class="entity-view__info__data__other__item"><mat-icon>phone</mat-icon>{{phone}}</span>
-          <span class="entity-view__info__data__other__item"><mat-icon>email</mat-icon>{{user.email}}</span>
-        </div>
-      </div>
-    </div>
+    <blue-header [items]="breadcrumbs" [titleValue]="userBackup.firstName + ' ' + userBackup.lastName"></blue-header>
 
     <tab-header [elements]="tabHeaders" [selectedIndex]="selectedIndex" (select)="setIndex($event)"></tab-header>
 
@@ -27,7 +12,6 @@
             <div class="profile-page__content__general__title">
               <div class="profile-page__content__general__title__main">{{'PROFILE_DETAILS_TITLE' | translate}}</div>
               <div class="profile-page__content__general__title__sub">{{'PROFILE_DETAILS_SUBTITLE' | translate}}</div>
-              <!--<mat-icon>more_vert</mat-icon>-->
             </div>
 
             <div class="profile-page__content__general__data">
