Integrate analytics filters for transactions

--- a/src/app/pages/transactions-page/transactions-index/transactions.component.html
+++ b/src/app/pages/transactions-page/transactions-index/transactions.component.html
@@ -8,6 +8,8 @@
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
+                (onCellClick)="cellClicked($event)"
+                (onSort)="updateSort($event)"
                 (filtersSelected)="openFiltersDialog()"
                 (tabSelected)="selectTab($event)"
                 (dateChanged)="changeDate($event)"
