--- a/src/app/dialog-modals/column-preferences-dialog/column-preferences-dialog.component.html
+++ b/src/app/dialog-modals/column-preferences-dialog/column-preferences-dialog.component.html
@@ -7,7 +7,7 @@
 
   <div class="content">
     <div class="item" *ngFor="let params of columnParams">
-      <mat-checkbox [(ngModel)]="params.selected"></mat-checkbox>
+      <mat-checkbox class="checkbox-blue" [(ngModel)]="params.selected"></mat-checkbox>
       <div>{{params.label | translate}}</div>
     </div>
   </div>
