--- a/src/app/dialog-modals/transaction-filters-dialog/transaction-filters-dialog.component.html
+++ b/src/app/dialog-modals/transaction-filters-dialog/transaction-filters-dialog.component.html
@@ -9,13 +9,6 @@
 
     <div class="content">
 
-      <div class="mrw-bi-input search-input-container">
-        <mat-form-field [floatLabel]="'never'">
-          <input type="text" matInput placeholder="Search">
-        </mat-form-field>
-        <mat-icon class="topnav__search__icon">search</mat-icon>
-      </div>
-
       <div class="date">
 
         <div class="date__title">Date Range</div>
@@ -27,46 +20,20 @@
         <div class="box-row">
           <div class="box">
             <div class="label">Status</div>
-            <mat-checkbox [checked]="true">All</mat-checkbox>
-            <mat-checkbox>Chargeback</mat-checkbox>
-            <mat-checkbox>Decline</mat-checkbox>
-            <mat-checkbox>Refund</mat-checkbox>
-            <mat-checkbox>Success</mat-checkbox>
-            <mat-checkbox>Success</mat-checkbox>
+            <mat-checkbox [(ngModel)]="allStatus">All</mat-checkbox>
+            <mat-checkbox [(ngModel)]="chargebackStatus">Chargeback</mat-checkbox>
+            <mat-checkbox [(ngModel)]="refundStatus">Refund</mat-checkbox>
+            <mat-checkbox [(ngModel)]="saleStatus">Sale</mat-checkbox>
           </div>
 
-          <div class="box">
-            <div class="label">Card Type</div>
-            <mat-checkbox [checked]="true">All</mat-checkbox>
-            <mat-checkbox>American Express</mat-checkbox>
-            <mat-checkbox>Mastercard</mat-checkbox>
-            <mat-checkbox>Visa</mat-checkbox>
-          </div>
-        </div>
-
-        <div class="box-row">
           <div class="box">
             <div class="label">MID Responses</div>
-            <mat-checkbox [checked]="true">All</mat-checkbox>
-            <mat-checkbox>Decline</mat-checkbox>
-            <mat-checkbox>Error</mat-checkbox>
-            <mat-checkbox>Success</mat-checkbox>
-          </div>
-
-          <div class="box">
-            <div class="label">MIDs</div>
-            <mat-checkbox [checked]="true">All</mat-checkbox>
-            <mat-checkbox>Mid 1</mat-checkbox>
-            <mat-checkbox>Mid 2</mat-checkbox>
-            <mat-checkbox>Mid 3</mat-checkbox>
+            <mat-checkbox [(ngModel)]="allResponse">All</mat-checkbox>
+            <mat-checkbox [(ngModel)]="declineResponse">Decline</mat-checkbox>
+            <mat-checkbox [(ngModel)]="errorResponse">Error</mat-checkbox>
+            <mat-checkbox [(ngModel)]="successResponse">Success</mat-checkbox>
           </div>
         </div>
-      </div>
-
-      <div class="filter">
-        <div class="filter__title">Locations</div>
-
-        <location-filter [locations]="locations" (locationAdded)="addLocation()" (locationRemovedAtIndex)="removeLocationAtIndex($event)"></location-filter>
       </div>
 
       <div class="filter">
