--- a/src/app/shared/components/filter-daterange-picker/filter-daterange-picker.component.html
+++ b/src/app/shared/components/filter-daterange-picker/filter-daterange-picker.component.html
@@ -1,5 +1,5 @@
 <div class="datepicker--custom datepicker--custom--filters--filter">
-  <div daterangepicker (selected)="emitDateSelected($event)">
+  <div daterangepicker (selected)="emitDateSelected($event)" [options]="options">
     <div class="date__label">
       <mat-icon>date_range</mat-icon>{{_date.start | formatDateTime: 'MMMM D, YYYY'}} to {{_date.end | formatDateTime: 'MMMM D, YYYY'}}
     </div>
