--- a/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
+++ b/src/app/pages/shipping-receipts-page/shipping-receipts-index/shipping-receipts.component.html
@@ -4,7 +4,7 @@
 
   <filter-table [date]="date"
                 [columnParams]="columnParams"
-                [items]="entitiesHolder"
+                [items]="shippingReceipts"
                 [tabs]="tabs"
                 [loading]="loadingData"
                 [singleOptions]="options"
