--- a/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.html
+++ b/src/app/pages/customer-advanced-page/order-detailed/order-detailed.component.html
@@ -8,7 +8,7 @@
     <div class="info">
       <button mat-button (click)="backButtonSelected.emit(true)"><mat-icon>keyboard_arrow_left</mat-icon> All Orders</button>
 
-      <div>Billed {{_order.date | formatDateTime: 'MMMM DD, YYYY'}}</div>
+      <div>Billed {{_order.rebill.billAt | formatDateTime: 'MMMM DD, YYYY'}}</div>
       <div class="separator"></div>
       <div class="refund" *ngIf="_order.hasRefund(); else norefund" [matMenuTriggerFor]="refundDetails">
         {{_order.amountAfterRefund().usd()}}
