--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/scss/colors";
+
 .email-template-view {
   &__card-container {
     align-items: flex-start;
@@ -68,4 +70,20 @@ entity-view-entityacl {
   border-radius: 4px;
   border: 2px solid rgba(255,255,255,0.4);
   background: #3D6EB3;
+}
+
+.test-button {
+  margin: 0 10px;
+  color: #ffffff;
+  font-size: 18px;
+  height: 46px;
+  width: 385px;
+  line-height: 46px;
+  background: $action-color;
+  color: #ffffff;
+  border-radius: 4px;
+}
+
+.alone {
+  margin-top: 10px;
 }
