--- a/src/app/pages/email-templates-page/email-template-view/token-view/token-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/token-view/token-view.component.html
@@ -1,10 +1,8 @@
 <div class="token-view__content" *ngIf="token">
 
-  <div class="token-view__path" (click)="tokenSelected.emit(token)" *ngIf="token.isTerminal && token.contains(filter)">
-    <div class="token-view__path__title">{{token.parent ? token.parent.name + ' ' + token.displayName : token.title}}</div>
-    <div class="token-view__path__token"><span>{{</span>{{token.path}}<span>}}</span> <mat-icon>add</mat-icon></div>
-    <div class="token-view__path__description">{{token.description}}</div>
+  <div class="token-view__path" (click)="tokenSelected.emit(token)" *ngIf="token.contains(filter)">
+    <div class="token-view__path__title">{{token.description}}</div>
+    <div class="token-view__path__token"><span>{{</span>{{token.value}}<span>}}</span> <mat-icon>add</mat-icon></div>
   </div>
 
-  <token-view class="token-view__subtokens" (tokenSelected)="tokenSelected.emit($event)" *ngFor="let s of token.subtokens" [token]="s" [filter]="filter"></token-view>
 </div>
