--- a/src/app/shared/components/filter-table/filter-table.component.html
+++ b/src/app/shared/components/filter-table/filter-table.component.html
@@ -6,7 +6,7 @@
       <div class="datepicker--custom datepicker--custom--filters">
         <div daterangepicker (selected)="dateSelected($event)" [options]="options">
           <div class="datepicker__label">
-            <mat-icon>date_range</mat-icon>{{_date.start | formatDateTime: 'MMMM D, YYYY'}} to {{_date.end | formatDateTime: 'MMMM D, YYYY'}}
+            <mat-icon>date_range</mat-icon>{{_date.start | formatDateTime: 'MMM D, YYYY'}} to {{_date.end | formatDateTime: 'MMM D, YYYY'}}
           </div>
         </div>
       </div>
@@ -46,7 +46,7 @@
 
     <div [style.width]="getHeaderWidthByElement(head)" class="floating-header">
       <div class="head" [style.width]="getHeaderWidthByElement(bulkheader)">
-        <mat-checkbox class="checkbox-blue" (change)="toggleBulkSelection($event)"></mat-checkbox>
+        <mat-checkbox class="checkbox-blue" [(ngModel)]="bulkSelected" (change)="toggleBulkSelection($event)"></mat-checkbox>
       </div>
       <ng-container *ngFor="let params of columnParams;">
         <div class="head" *ngIf="params.selected" [style.width]="getHeaderWidth(params)" (click)="onSort.emit(params)">
