Update sort icon

--- a/src/app/shared/components/filter-table/filter-table.component.scss
+++ b/src/app/shared/components/filter-table/filter-table.component.scss
@@ -243,6 +243,8 @@
       cursor: pointer;
 
       .arrows {
+        margin-right: 2px;
+        margin-left: -2px;
         display: flex;
 
         mat-icon {
