--- a/src/app/shared/components/filter-table/filter-table.component.scss
+++ b/src/app/shared/components/filter-table/filter-table.component.scss
@@ -201,6 +201,7 @@
     td {
       font-size: 13px;
       padding: 10px;
+      line-height: 27px;
 
       &:last-of-type {
         mat-icon {
@@ -277,4 +278,21 @@
 .clickable {
   cursor: pointer;
   color: $main-color-300;
+}
+
+.capitalized {
+  text-transform: capitalize;
+}
+
+.table-icon {
+  margin-right: 3px;
+  border-radius: 50%;
+  height: 18px;
+  width: 18px;
+  font-size: 18px;
+  vertical-align: middle;
+}
+
+.table-content {
+  vertical-align: middle;
 }
