--- a/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
+++ b/src/app/pages/dashboard-page/states/low-data/dashboard-low-data.component.html
@@ -43,20 +43,20 @@
             <tbody>
             <tr [routerLink]="['/transactions', transaction.id]" *ngFor="let transaction of transactions">
               <td>
-                <div *ngIf="transaction.processorResponse.message.toLowerCase() === 'success'" class="icon-holder icon-holder__success">
+                <div *ngIf="transaction.response === 'success'" class="icon-holder icon-holder__success">
                   <mat-icon class="success-icon" role="img" aria-hidden="true">done</mat-icon>
                 </div>
-                <div *ngIf="transaction.processorResponse.message.toLowerCase() === 'failed'" class="icon-holder icon-holder__fail">
-                  <mat-icon class="fail-icon" role="img" aria-hidden="true">not_interested</mat-icon>
+                <div *ngIf="transaction.response === 'decline'" class="icon-holder icon-holder__decline">
+                  <mat-icon class="decline-icon" role="img" aria-hidden="true">block</mat-icon>
                 </div>
-                <div *ngIf="transaction.processorResponse.message.toLowerCase() === 'error'" class="icon-holder icon-holder__fail">
-                  <mat-icon class="fail-icon" role="img" aria-hidden="true">error</mat-icon>
+                <div *ngIf="transaction.response === 'error'" class="icon-holder icon-holder__error">
+                  <mat-icon class="error-icon" role="img" aria-hidden="true">error</mat-icon>
                 </div>
-                <div class="success">{{transaction.processorResponse.message}}</div>
+                <div class="success response">{{transaction.response}}</div>
               </td>
               <td>{{transaction.amount.usd()}}</td>
-              <td>{{transaction.createdAt | formatDateTime: 'date-time'}}</td>
-              <td>{{transaction.merchantProvider.name}}</td>
+              <td>{{transaction.date | formatDateTime: 'date-time'}}</td>
+              <td>{{transaction.merchantProvider}}</td>
             </tr>
             </tbody>
           </table>
