Update decline icons on cso page

--- a/src/app/dialog-modals/view-transaction-dialog/view-transaction-dialog.component.scss
+++ b/src/app/dialog-modals/view-transaction-dialog/view-transaction-dialog.component.scss
@@ -38,6 +38,10 @@
   background: #DC2547 !important;
 }
 
+.decline {
+  background: rgba(0,0,0,0.30) !important;
+}
+
 .icon {
   padding: 2px;
   margin-right: 5px;
