--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.scss
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.scss
@@ -64,6 +64,16 @@
   }
 }
 
+.status {
+  display: flex;
+  align-items: center;
+
+  span {
+    margin-left: 5px;
+    text-transform: capitalize;
+  }
+}
+
 .status-icon {
   width: 20px;
   height: 20px;
